# Epitech2-CCP-ThePlazza

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: debug.yml  linter.yml  pr_to_main.yml  run_tests.yml
include/: Constants.hpp  Cook.hpp  IIngredient.hpp  Ingredient.hpp  Kitchen.hpp  Pizza.hpp  PizzaFactory.hpp  PizzaInfos.hpp  Stock.hpp  plazza.hpp
libs/json_parser/: CMakeLists.txt  Makefile
libs/json_parser/include/: Json.hpp
libs/json_parser/src/: Json.cpp  JsonArray.cpp  JsonCore.cpp  JsonNumber.cpp  JsonObject.cpp  JsonString.cpp
src/: Constants.cppm  Poller.cpp  Poller.hpp  Reception.cpp  Reception.hpp  main.cpp
src/IPC/: NamedPipe.cpp  NamedPipe.hpp  Process.cpp  Process.hpp
src/Ingredients/: Tomato.cpp  Tomato.hpp
src/Kitchen/: Cook.cpp  Cook.hpp  Kitchen.cpp  Kitchen.hpp  KitchenProcess.cpp  KitchenProcess.hpp  Safequeue.hpp  Stock.cpp  Stock.hpp
src/Pizza/: Pizza.cpp  Pizza.hpp  PizzaFactory.cpp  PizzaFactory.hpp  PizzaInfos.cpp  PizzaInfos.hpp
src/Shell/: Shell.cpp  Shell.hpp
tests/: test.cpp
